# bayesplay-rs

./: .gitignore  Cargo.toml
.github/workflows/: test.yml
bayesplay/: Cargo.toml
bayesplay/src/: lib.rs
bayesplay/src/common/: mod.rs
bayesplay/src/compute/: integration_tests.rs  mod.rs  model.rs
bayesplay/src/likelihood/: binomial.rs  mod.rs  noncentral_d.rs  noncentral_d2.rs  noncentral_t.rs  normal.rs  student_t.rs
bayesplay/src/prior/: beta.rs  cauchy.rs  mod.rs  normal.rs  point.rs  student_t.rs  uniform.rs
interface/: Cargo.toml
interface/src/: lib.rs
rmath/: Cargo.toml
rmath/src/: lib.rs
rmath/src/distributions/: beta.rs  binomial.rs  cauchy.rs  exponential.rs  mod.rs  normal.rs  t.rs  uniform.rs
rmath/src/integration/: mod.rs
