[package]
name = "rmath"
version = "0.1.0"
edition = "2024"
# build = "build.rs"

[dependencies]
approx_eq = "0.1.8"
approx = "0.5.1"
gkquad = {version = "0.0.4", default-features = false, features=["std"]}
statrs = "0.16.0"
thiserror = "2.0.12"


[build-dependencies]
serde_json = {version = "1.0.108"}
serde = {version = "1.0.192", features = ["derive"]}
